# rust-dylib-poc

./: Cargo.toml  flake.nix  result
dylib/: Cargo.toml
dylib/src/: lib.rs
src/: main.rs
