[workspace]
members = [".", "dylib"]

[package]
name = "dylib-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
libloading = "0.8.3"
async-ffi = { workspace = true }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"

[workspace.dependencies]
async-ffi = { version = "0.5.0", features = ["macros"] }
