[package]
name = "dylib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-ffi = { workspace = true }
ctor = "0.2.8"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.18"
